# RASPA2

./: .gitignore  .nb  AUTHORS  Building  ChangeLog.md  MANIFEST.in  Makefile.am  NEWS  README  README.md  T  configure.ac  ltconfig  setup.py  work.pc
Docs/: FileName.tex  fig4tex.sty  fig4tex.tex  palatcm.sty  raspa.out  raspa.tex  raspa.toc
Docs/Appendix/: appendix.tex
Docs/Code/: code.tex
Docs/Examples/: biblio.bib  examples.tex  jpc.bst
Docs/InputFiles/: Thumbs.db  biblio.bib  input_files.tex
Docs/Introduction/: introduction.tex
Docs/Potentials/: biblio.bib  potentials.tex
Docs/TroubleShooting/: troubleshooting.tex
Docs/Tutorial/: Ammonia-fractional.tiff  Ammonia-system.tiff  MIL-47-2x2x4.tiff  MIL-47.tiff  biblio.bib  tutorial.tex  tutorial.tex.bak
Docs/Visualization/: visualization.tex
examples/Visualization/FullCell/Highlight/MgMOF-74/Step2a/: CMakeLists.txt  input
forcefield/: Makefile.am
forcefield/AmirjalayerSchmid/: Makefile.am  force_field_mixing_rules.def  pseudo_atoms.def
forcefield/CastilloVlugtCalero2009/: Makefile.am  force_field_mixing_rules.def  pseudo_atoms.def
forcefield/CoreShellCatlow/: Makefile.am  pseudo_atoms.def
forcefield/CoreShellSastreGale2005/: Makefile.am  force_field.def  pseudo_atoms.def
forcefield/CoreShellSchroderSauer/: Makefile.am  force_field.def  force_field_mixing_rules.def  pseudo_atoms.def
forcefield/CrystalGenerator/: Makefile.am  force_field_mixing_rules.def  pseudo_atoms.def
forcefield/Dubbeldam2007FlexibleIRMOF-1/: Makefile.am  force_field_mixing_rules.def  pseudo_atoms.def
forcefield/Dubbeldam2007FlexibleIRMOF-10/: Makefile.am  force_field_mixing_rules.def  pseudo_atoms.def
forcefield/Dubbeldam2007FlexibleIRMOF-16/: Makefile.am  force_field.def  force_field_mixing_rules.def  pseudo_atoms.def
forcefield/Dubbeldam2012MIL-100/: Makefile.am  pseudo_atoms.def
forcefield/Dubbeldam2012MIL-101/: Makefile.am  force_field_mixing_rules.def  pseudo_atoms.def
forcefield/Dzubak2012-IRMOF-1/: Makefile.am  force_field.def  pseudo_atoms.def
forcefield/Dzubak2012-MgMOF-74/: Makefile.am  force_field_mixing_rules.def  pseudo_atoms.def
forcefield/Dzubak2012-MgMOF-74-extended/: Makefile.am  force_field.def  pseudo_atoms.def
forcefield/Dzubak2012-ZnMOF-74/: Makefile.am  force_field.def  pseudo_atoms.def
forcefield/ExampleMOFsForceField/: Makefile.am  force_field_mixing_rules.def  pseudo_atoms.def
forcefield/ExampleMoleculeForceField/: Makefile.am  force_field_mixing_rules.def
forcefield/ExampleZeolitesForceField/: Makefile.am  force_field_mixing_rules.def
forcefield/GarciaPerez2006/: Makefile.am  force_field.def  force_field_mixing_rules.def  pseudo_atoms.def
forcefield/GenericMOFs/: Makefile.am  force_field_mixing_rules.def  pseudo_atoms.def
forcefield/GenericZeolites/: Makefile.am  force_field_mixing_rules.def  pseudo_atoms.def
forcefield/MgMOF-74-Yazaydin/: Makefile.am  force_field_mixing_rules.def  pseudo_atoms.def
forcefield/Nicholas/: Makefile.am  force_field.def  force_field_mixing_rules.def  pseudo_atoms.def
forcefield/Pascual2004/: Makefile.am  force_field_mixing_rules.def  pseudo_atoms.def
forcefield/RigidIonKramer1991/: Makefile.am  force_field.def  force_field_mixing_rules.def  pseudo_atoms.def
forcefield/TraPPE/: Makefile.am  force_field_mixing_rules.def  pseudo_atoms.def
framework/: Makefile.am  Raspberry
framework/AmirjalayerSchmid/: Makefile.am  framework.def
framework/CoreShellCatlow/: Makefile.am
framework/CoreShellSastreGale2005/: Makefile.am  framework.def
framework/CoreShellSchroderSauer/: Makefile.am  framework.def
framework/Demontis/: Makefile.am  framework.def
framework/DemontisModified/: Makefile.am  framework.def
framework/Dubbeldam2007FlexibleIRMOF-1/: Makefile.am  framework.def
framework/Dubbeldam2007FlexibleIRMOF-10/: Makefile.am
framework/Dubbeldam2007FlexibleIRMOF-16/: Makefile.am  framework.def
framework/Nicholas/: Makefile.am  framework.def
framework/NicholasModified/: Makefile.am  framework.def
molecules/: Makefile.am  Your
molecules/CastilloVlugtCalero2009/: Makefile.am  benzene.def  m-xylene.def  o-xylene.def  p-xylene.def  toluene.def
molecules/EPM2/: Makefile.am
molecules/ExampleDefinitions/: 2-methylbutane.def  23-dimethylbutane.def  Makefile.am  O2.def  argon.def  butane.def  ethane.def  helium.def  heptane.def  methane.def  nonane.def  octane.def  pentane.def  propane.def
molecules/Generic/: Makefile.am
molecules/TraPPE/: 1-butene.def  2-cis-butene.def  2-ethyl-2-hexenal-cis.def  2-ethyl-2-hexenal-trans.def  2-methylbutane.def  2-methylheptane.def  2-methylhexane.def  2-methylpentane.def  2-trans-butene.def  22-dimethylbutane.def  22-dimethylhexane.def  22-dimethylpentane.def  223-trimethylbutane.def  224-trimethylpentane.def  22dmC8.def  23-dimethylbutane.def  23-dimethylhexane.def  23-dimethylpentane.def  24-dimethylhexane.def  24-dimethylpentane.def  24dmC8.def  25-dimethylhexane.def  27dmC8.def  2mC9.def  3-methylheptane.def  3-methylhexane.def  3-methylpentane.def  33-dimethylhexane.def  33-dimethylpentane.def  3mC9.def  4mC9.def  (+74 more)
molecules/TraPPE-EH/: Makefile.am  methane.def
molecules/TraPPE-UA/: 2-methylbutane.def  2-methylpentane.def  Makefile.am  butane.def  dimethylpropane.def  ethane.def  heptane.def  isobutane.def  pentane.def  propane.def
python/: __init__.py  output_parser.py  raspa2.py
run/: Makefile.am  Run
src/: Alchemical_transformation.c  Alchemical_transformation.h  Makefile.am  alchemical_transformation.c  alchemical_transformation.h  cbmc.c  cbmc.h  charge_equilibration.c  charge_equilibration.h  complex.c  complex.h  constants.c  constants.h  cubic_spline_1d.c  cubic_spline_1d.h  equations_of_state.c  equations_of_state.h  ewald.c  ewald.h  framework.c  framework.h  framework_born.c  framework_born.h  framework_energy.c  framework_energy.h  framework_force.c  framework_force.h  framework_hessian.c  framework_hessian.h  grids.c  grids.h  input.c  input.h  integrate.c  integrate.h  integration.c  integration.h  inter_born.c  inter_born.h  inter_energy.c  (+68 more)
structures/: Makefile.am
(+784 files in other folders)
