pkgdatadir = $(datadir)/@PACKAGE@/forcefield
SUBDIRS = GenericMOFs \
          GenericZeolites \
          CrystalGenerator \
          Dubbeldam2007FlexibleIRMOF-1 \
          Dubbeldam2007FlexibleIRMOF-10 \
          Dubbeldam2007FlexibleIRMOF-16 \
          GarciaPerez2006 \
          CoreShellSchroderSauer \
          CoreShellSastreGale2005 \
          CoreShellCatlow \
          RigidIonKramer1991 \
          Pascual2004 \
          AmirjalayerSchmid \
          Nicholas \
          Dubbeldam2012MIL-100 \
          Dubbeldam2012MIL-101 \
          Dzubak2012-IRMOF-1 \
          Dzubak2012-MgMOF-74 \
          Dzubak2012-MgMOF-74-extended \
          Dzubak2012-ZnMOF-74 \
          MgMOF-74-Yazaydin \
          CastilloVlugtCalero2009 \
          TraPPE
