pkgdatadir = $(datadir)/@PACKAGE@/forcefield
SUBDIRS = ExampleMOFsForceField \
          ExampleZeolitesForceField \
          ExampleMoleculeForceField \
          Dubbeldam2007FlexibleIRMOF-1 \
          Dubbeldam2007FlexibleIRMOF-10 \
          Dubbeldam2007FlexibleIRMOF-16 \
          Nicholas \
          CoreShellSchroderSauer
