SUBDIRS = Dubbeldam2007FlexibleIRMOF-1 \
          Dubbeldam2007FlexibleIRMOF-10 \
          Dubbeldam2007FlexibleIRMOF-16 \
          CoreShellCatlow \
          CoreShellSchroderSauer \
          CoreShellSastreGale2005 \
          Demontis \
          DemontisModified \
          Nicholas \
          NicholasModified \
          AmirjalayerSchmid 
